--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ author:
 
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
-repository: palden518/DBS101.github.io
+repository: palden518/DBS101
 repository_tree: master
 
 
