[chore]: update timetable navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -58,7 +58,7 @@ docs-en:
   - title: Timetable
     children:
     - title: Module Timetable
-      url: /about.html
+      url: 2024/02/09/moduletimetable.html
   - title: Resources
     children:
     - title: Lecture Slides
