[chore]: added usefullinks

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -43,7 +43,7 @@ docs-en:
     - title: Study Guide
       url: 2024/01/30/studyGuide.html
     - title: Useful Links
-      url: 2024/01/02/comingsoon.html
+      url: 2024/02/12/usefullinks.html
 pract-en:
   - title: Practicals
     children:
