update unit2 study guide

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -62,4 +62,4 @@ guide-en:
     - title: Unit 1
       url: 2024/02/01/unit1.html
     - title: Unit 2
-      url: 2024/01/02/comingsoon.html
+      url: 2024/02/20/unit2.html
