[practical]: add practical 1 materials

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -50,7 +50,7 @@ pract-en:
     - title: Setup and Installation
       url: 2024/02/20/setupInstallation.html
     - title: Practical 1
-      url: 2024/01/02/comingsoon.html
+      url: 2024/02/24/practical1.html
     - title: Practical 2
       url: 2024/01/02/comingsoon.html
 
