[chore]: update navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -52,7 +52,7 @@ pract-en:
     - title: Practical 1
       url: 2024/02/24/practical1.html
     - title: Practical 2
-      url: 2024/01/02/comingsoon.html
+      url: 2024/02/24/practical2.html
 
 guide-en:
   - title: Study Guides
