[practical]: add practical 3 materials

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -53,6 +53,8 @@ pract-en:
       url: 2024/02/24/practical1.html
     - title: Practical 2
       url: 2024/02/24/practical2.html
+    - title: Practical 3
+      url: 2024/03/05/practical3.html
 
 guide-en:
   - title: Study Guides
