[practical]: add practical 4

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -55,6 +55,8 @@ pract-en:
       url: 2024/02/24/practical2.html
     - title: Practical 3
       url: 2024/03/05/practical3.html
+    - title: Practical 4
+      url: 2024/03/06/practical4.html
 
 guide-en:
   - title: Study Guides
