[practical] : add practical 5 materials

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -57,6 +57,8 @@ pract-en:
       url: 2024/03/05/practical3.html
     - title: Practical 4
       url: 2024/03/06/practical4.html
+    - title: Practical 5
+      url: 2024/03/11/practical5.html
 
 guide-en:
   - title: Study Guides
