[practical]: add practical 6 materials

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -59,6 +59,8 @@ pract-en:
       url: 2024/03/06/practical4.html
     - title: Practical 5
       url: 2024/03/11/practical5.html
+    - title: Practical 6
+      url: 2024/03/12/practical6.html
 
 guide-en:
   - title: Study Guides
