[chore]: update unit study guide

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -71,3 +71,23 @@ guide-en:
       url: 2024/02/01/unit1.html
     - title: Unit 2
       url: 2024/02/20/unit2.html
+    - title: Unit 3
+      url: 2024/03/02/unit3.html
+    - title: Unit 4
+      url: 2024/03/02/unit4.html
+    - title: Unit 5
+      url: 2024/03/02/unit5.html
+    - title: Unit 6
+      url: 2024/01/02/comingsoon.html
+    - title: Unit 7
+      url: 2024/01/02/comingsoon.html
+    - title: Unit 8
+      url: 2024/01/02/comingsoon.html
+    - title: Unit 9
+      url: 2024/01/02/comingsoon.html
+    - title: Unit 10
+      url: 2024/01/02/comingsoon.html
+    - title: Unit 11
+      url: 2024/01/02/comingsoon.html
+    - title: Unit 12
+      url: 2024/01/02/comingsoon.html
