[chore]: update navigation and studyguide

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -78,7 +78,7 @@ guide-en:
     - title: Unit 5
       url: 2024/03/02/unit5.html
     - title: Unit 6
-      url: 2024/01/02/comingsoon.html
+      url: 2024/03/02/unit7.html
     - title: Unit 7
       url: 2024/01/02/comingsoon.html
     - title: Unit 8
