--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -61,6 +61,9 @@ pract-en:
       url: 2024/03/11/practical5.html
     - title: Practical 6
       url: 2024/03/12/practical6.html
+    - title: Practical 7
+      url: 2024/04/01/practical6.html
+
 
 guide-en:
   - title: Study Guides
