[chore]: update navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -63,6 +63,8 @@ pract-en:
       url: 2024/03/12/practical6.html
     - title: Practical 7
       url: 2024/04/01/practical7.html
+    - title: Practical 8
+      url: 2024/04/14/practical8.html
 
 
 guide-en:
