--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -87,7 +87,7 @@ guide-en:
     - title: Unit 7
       url: 2024/03/02/unit7.html
     - title: Unit 8
-      url: 2024/01/02/comingsoon.html
+      url: 2024/04/28/unit8.html
     - title: Unit 9
       url: 2024/01/02/comingsoon.html
     - title: Unit 10
