--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -65,6 +65,8 @@ pract-en:
       url: 2024/04/01/practical7.html
     - title: Practical 8
       url: 2024/04/14/practical8.html
+    - title: Practical 9
+      url: 2024/04/20/practical9.html
 
 
 guide-en:
