--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -67,6 +67,8 @@ pract-en:
       url: 2024/04/14/practical8.html
     - title: Practical 9
       url: 2024/04/20/practical9.html
+    - title: Practical 10
+      url: 2024/05/04/practical10.html
 
 
 guide-en:
