[practical]: add practical 11

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -69,6 +69,8 @@ pract-en:
       url: 2024/04/20/practical9.html
     - title: Practical 10
       url: 2024/05/04/practical10.html
+    - title: Practical 11
+      url: 2024/05/11/practical11.html
 
 
 guide-en:
