[chore]: update unit 9 study guide

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -95,7 +95,7 @@ guide-en:
     - title: Unit 8
       url: 2024/04/28/unit8.html
     - title: Unit 9
-      url: 2024/01/02/comingsoon.html
+      url: 2024/04/28/unit9.html
     - title: Unit 10
       url: 2024/01/02/comingsoon.html
     - title: Unit 11
