[practical]: Add practical 12

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -71,6 +71,8 @@ pract-en:
       url: 2024/05/04/practical10.html
     - title: Practical 11
       url: 2024/05/11/practical11.html
+    - title: Practical 12
+      url: 2024/05/23/practical12.html
 
 
 guide-en:
