--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -51,28 +51,28 @@ pract-en:
       url: 2024/02/20/setupInstallation.html
     - title: Practical 1
       url: 2024/02/24/practical1.html
-    - title: Practical 2
-      url: 2024/02/24/practical2.html
-    - title: Practical 3
-      url: 2024/03/05/practical3.html
-    - title: Practical 4
-      url: 2024/03/06/practical4.html
-    - title: Practical 5
-      url: 2024/03/11/practical5.html
-    - title: Practical 6
-      url: 2024/03/12/practical6.html
-    - title: Practical 7
-      url: 2024/04/01/practical7.html
-    - title: Practical 8
-      url: 2024/04/14/practical8.html
-    - title: Practical 9
-      url: 2024/04/20/practical9.html
-    - title: Practical 10
-      url: 2024/05/04/practical10.html
-    - title: Practical 11
-      url: 2024/05/11/practical11.html
-    - title: Practical 12
-      url: 2024/05/23/practical12.html
+    # - title: Practical 2
+    #   url: 2024/02/24/practical2.html
+    # - title: Practical 3
+    #   url: 2024/03/05/practical3.html
+    # - title: Practical 4
+    #   url: 2024/03/06/practical4.html
+    # - title: Practical 5
+    #   url: 2024/03/11/practical5.html
+    # - title: Practical 6
+    #   url: 2024/03/12/practical6.html
+    # - title: Practical 7
+    #   url: 2024/04/01/practical7.html
+    # - title: Practical 8
+    #   url: 2024/04/14/practical8.html
+    # - title: Practical 9
+    #   url: 2024/04/20/practical9.html
+    # - title: Practical 10
+    #   url: 2024/05/04/practical10.html
+    # - title: Practical 11
+    #   url: 2024/05/11/practical11.html
+    # - title: Practical 12
+    #   url: 2024/05/23/practical12.html
 
 
 guide-en:
