--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -44,6 +44,8 @@ docs-en:
       url: 2024/01/30/studyGuide.html
     - title: Useful Links
       url: 2024/02/12/usefullinks.html
+    - title: Personal Website Setup
+      url: 2024-02-11-SetupPersonalWebsite.html
 pract-en:
   - title: Practicals
     children:
