--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -53,10 +53,10 @@ pract-en:
       url: 2024/02/20/setupInstallation.html
     - title: Practical 1
       url: 2024/02/24/practical1.html
-    # - title: Practical 2
-    #   url: 2024/02/24/practical2.html
-    # - title: Practical 3
-    #   url: 2024/03/05/practical3.html
+    - title: Practical 2
+      url: 2025/03/10/practical2.html
+    - title: Practical 3
+      url: 2025/03/11/practical3.html
     # - title: Practical 4
     #   url: 2024/03/06/practical4.html
     # - title: Practical 5
