--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -57,8 +57,8 @@ pract-en:
       url: 2025/03/10/practical2.html
     - title: Practical 3
       url: 2025/03/11/practical3.html
-    # - title: Practical 4
-    #   url: 2024/03/06/practical4.html
+    - title: Practical 4
+      url: 2025/03/27/practical4.html
     # - title: Practical 5
     #   url: 2024/03/11/practical5.html
     # - title: Practical 6
@@ -84,25 +84,25 @@ guide-en:
       url: 2024/01/30/studyGuide.html
     - title: Unit 1
       url: 2024/02/01/unit1.html
-    - title: Unit 2
-      url: 2024/02/20/unit2.html
-    - title: Unit 3
-      url: 2024/03/02/unit3.html
-    - title: Unit 4
-      url: 2024/03/02/unit4.html
     - title: Unit 5
-      url: 2024/03/02/unit5.html
-    - title: Unit 6
-      url: 2024/03/02/unit6.html
-    - title: Unit 7
-      url: 2024/03/02/unit7.html
+      url: 2025/04/15/unit5.html
     - title: Unit 8
-      url: 2024/04/28/unit8.html
-    - title: Unit 9
-      url: 2024/04/28/unit9.html
-    - title: Unit 10
-      url: 2024/01/02/comingsoon.html
-    - title: Unit 11
-      url: 2024/01/02/comingsoon.html
-    - title: Unit 12
-      url: 2024/01/02/comingsoon.html
+      url: 2025/04/24/unit5.html
+    # - title: Unit 3
+    #   url: 2024/03/02/unit3.html
+    # - title: Unit 4
+    #   url: 2024/03/02/unit4.html 
+    # - title: Unit 6
+    #   url: 2024/03/02/unit6.html
+    # - title: Unit 7
+    #   url: 2024/03/02/unit7.html
+    # - title: Unit 8
+    #   url: 2024/04/28/unit8.html
+    # - title: Unit 9
+    #   url: 2024/04/28/unit9.html
+    # - title: Unit 10
+    #   url: 2024/01/02/comingsoon.html
+    # - title: Unit 11
+    #   url: 2024/01/02/comingsoon.html
+    # - title: Unit 12
+    #   url: 2024/01/02/comingsoon.html
